Allow object to be accessed by multiple QDeclarativeEngines

Task-number: QTBUG-18610

Change-Id: Idd9444018b5344586d6579ddac6a0ffd26bf7139
Reviewed-on: http://codereview.qt.nokia.com/2075
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Aaron Kennedy <aaron.kennedy@nokia.com>